Efeito Accordion no Faq com CSS e JS

--- a/css/style.css
+++ b/css/style.css
@@ -243,3 +243,33 @@ html.textomaior {
   }
 
 }
+
+.js .js-accordion dd {
+  display:none;
+}
+
+.js-accordion dt:after {
+  content: '⭭';
+  margin-left: 10px;
+}
+
+.js-accordion dt.ativo:after {
+  content: '⭫';
+}
+
+
+.js-accordion dd.ativo {
+  display: block;
+  transform: slideDowns 5s forwards;
+}
+
+@keyframes slideDowns {
+  from {
+    opacity: 0;
+    max-height: 0;
+  }
+  to {
+    opacity: 1;
+    max-height: 200px;
+  }
+}
