--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ html.textomaior {
 }
 
 .js-tabcontent section.ativo {
-  display: block; !important;
+  display: block !important;
   animation: show .5s forwards;
 }
 
@@ -241,29 +241,31 @@ html.textomaior {
     opacity: 1;
     transform: translate3d(0, 0, 0);
   }
-
 }
 
 .js .js-accordion dd {
-  display:none;
+  display: none;
 }
 
-.js-accordion dt:after {
+.js-accordion dt{
+  cursor: pointer;
+}
+
+.js-accordion dt::after {
   content: '⭭';
   margin-left: 10px;
 }
 
-.js-accordion dt.ativo:after {
+.js-accordion dt.ativo::after {
   content: '⭫';
 }
 
-
 .js-accordion dd.ativo {
   display: block;
-  transform: slideDowns 5s forwards;
+  animation: slideDown .5s forwards;
 }
 
-@keyframes slideDowns {
+@keyframes slideDown {
   from {
     opacity: 0;
     max-height: 0;
@@ -273,3 +275,16 @@ html.textomaior {
     max-height: 200px;
   }
 }
+
+.js .js-scroll {
+  opacity: 0;
+  transform: translate3d(-30px, 0, 0);
+  transition: .3s;
+}
+
+.js .js-scroll.ativo {
+  opacity: 1;
+  transform: translate3d(0, 0, 0);
+}
+
+
