--- a/css/geral.css
+++ b/css/geral.css
@@ -309,5 +309,20 @@
     transform: translate3d(0, 0, 0);
   }
   
-  
+
+  [data-semana]::after {
+    content: '';
+    display: inline-block;
+    width: 5px;
+    height: 5px;
+    background:rgb(255, 0, 0);
+    border-radius: 50%;
+    margin-left: 4px;
+    border: 2px solid #000;
+  }
+
+  [data-semana].aberto::after {
+    background: rgb(24, 194, 24);
+
+  }
   
